--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "books-management",
   "version": "1.0.0",
-  "description": "Books Management Project",
+  "description": "## Project - Books Management",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,7 +14,7 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
-    "mongoose": "^6.2.8",
+    "mongoose": "^6.2.9",
     "nodemon": "^2.0.15",
     "validator": "^13.7.0"
   }
